@@ -9,7 +9,7 @@ ERROR:  SQL/MM Spatial exception - start node not geometry start point.
 ERROR:  SQL/MM Spatial exception - end node not geometry end point.
 ERROR:  SQL/MM Spatial exception - geometry crosses a node
 ERROR:  SQL/MM Spatial exception - non-existent edge 666
-ERROR:  SQL/MM Spatial exception - geometry crosses an edge
+ERROR:  SQL/MM Spatial exception - geometry crosses edge 1
 T2|Edge 5 changed
 T3|Edge 5 changed
 T4|Edge 26 changed
